@@ -741,6 +741,10 @@
         name = "Daniel Bruegmann"
     [/entry]
     [entry]
+        name = "Doug Rosvick (dlr365)"
+        wikiuser = "dlr365"
+    [/entry]
+    [entry]
         name = "Ely Levy (Nakee)"
     [/entry]
     [entry]
